# vgi-llm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FIX-SPEC.md  README.md  SPEC.md  conftest.py  docker-entrypoint.sh  pyproject.toml  run_tests.sh  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: preprocess-require.awk
test/sql/: live.test  schema.test  secrets.test
tests/: fake_provider.py  harness.py  test_aggregates.py  test_embeddings.py  test_engine.py  test_routing.py  test_scalars.py
vgi_aisql/: __init__.py  aggregates.py  catalog.py  engine.py  meta.py  models.py  scalars.py  secrets.py  worker.py
vgi_aisql/providers/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
vgi_llm/: __init__.py  aggregates.py  catalog.py  engine.py  meta.py  models.py  scalars.py  secrets.py  worker.py
vgi_llm/providers/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
