[project]
name = "vgi-llm"
version = "0.1.1"
description = "AI SQL functions for DuckDB via VGI — Snowflake Cortex AISQL-style LLM completion, classification, filtering, extraction, sentiment, aggregation, and embeddings, over a pluggable provider (Anthropic / OpenRouter / OpenAI / Ollama) with keyless local embeddings."
readme = "README.md"
keywords = [
    "duckdb",
    "vgi",
    "ai",
    "llm",
    "cortex",
    "llm",
    "anthropic",
    "openrouter",
    "openai",
    "ollama",
    "embeddings",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vgi-python>=0.14.0",
    "anthropic>=0.69",
    "openai>=1.60",
    "fastembed>=0.3",
    "pyarrow>=17",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# HTTP-serving extra — installed by the Docker image (`.[serve]`).
serve = ["vgi-python[http]>=0.14.0"]
dev = [
    "mypy",
    "pyarrow-stubs",
    "pytest",
    "pytest-xdist",
    "ruff",
]
# NOTE: pydoclint is intentionally NOT here. It depends on `docstring-parser-fork`,
# which installs under the same `docstring_parser` import name as the real
# `docstring-parser`; having both in this venv collides nondeterministically. CI
# runs it isolated via `uvx pydoclint` instead (see .github/workflows/ci.yml).

[project.scripts]
vgi-llm-worker = "vgi_llm.worker:main"

[project.urls]
Repository = "https://github.com/Query-farm/vgi-llm"
Issues = "https://github.com/Query-farm/vgi-llm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_llm"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true
exclude = '\.venv|tests'

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fastembed.*", "onnxruntime.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit a real provider/network (excluded from the default gate)",
]
